# asupersync

./: ._asupersync_plan_v4.md  ._asupersync_v4_api_skeleton.rs  ._asupersync_v4_formal_semantics.md  .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  TESTING.md  UPGRADE_LOG.md  asupersync_plan_v4.md  asupersync_v4_api_skeleton.rs  asupersync_v4_formal_semantics.md  claude-upgrade-progress.json  libgf256.rlib
.beads/: .migration-hint-ts  config.yaml  issues.jsonl
.beads/recovery_20260312T213629Z/: br_doctor.json  br_show_asupersync-1qfd0.stderr  br_sync_status.json  manifest.txt
.github/: PULL_REQUEST_TEMPLATE.md  ci_matrix_policy.json
.github/workflows/: ci.yml  conformance.yml  publish.yml
artifacts/: authority_flow_audit_v1.json  bounded_controller_synthesis_v1.json  capability_token_model_v1.json  claim_evidence_graph_v1.json  crash_recovery_validation_v1.json  decision_plane_validation_v1.json  digital_twin_v1.json  kernel_fast_path_prototype_v1.json  raptorq_expected_loss_decision_contract_v1.json  raptorq_optimization_decision_records_v1.json  raptorq_program_closure_signoff_packet_v1.json  raptorq_track_e_gf256_bench_v1.json  raptorq_track_e_gf256_p95p99_highconf_v1.json  raptorq_track_f_wavefront_pipeline_v1.json  transport_frontier_benchmark_v1.json  wasm_qa_evidence_matrix_v1.json
asupersync-browser-core/src/: lib.rs
asupersync-macros/: Cargo.toml
asupersync-macros/src/: join.rs  lib.rs  race.rs  scope.rs  spawn.rs  util.rs
asupersync-macros/tests/compile_fail/: scope_return_in_body.rs  scope_return_in_body.stderr
asupersync-tokio-compat/: Cargo.toml
benches/: cancel_drain_bench.rs  cancel_trace_bench.rs  golden_output.rs  homology_benchmark.rs  phase0_baseline.rs  protocol_benchmark.rs  raptorq_benchmark.rs  reactor_benchmark.rs  scheduler_benchmark.rs  spork_baseline.rs  timer_wheel.rs  tracing_overhead.rs
conformance/: Cargo.toml
conformance/src/: lib.rs  logging.rs  report.rs  runner.rs  traceability.rs
conformance/src/bench/: benchmarks.rs  mod.rs  report.rs  runner.rs
conformance/src/tests/: budget.rs  mod.rs  outcome.rs  runtime.rs
docs/: asupersync_v4_formal_semantics.md  bead-harmonization-migration.md  benchmarking.md  cancellation-testing.md  doctor_remediation_recipe_contract.md  doctor_visual_regression_harness.md  integration.md  raptorq_baseline_bench_profile.md  raptorq_expected_loss_decision_contract.md  raptorq_program_closure_signoff_packet.md  replay-debugging.md  runtime_state_contention_inventory.md  semantic_evidence_bundle.md  semantic_gate_evaluation_report.md  semantic_inventory_lean.md  semantic_inventory_tla.md  semantic_runtime_gap_matrix.md  spork_deterministic_ordering.md  spork_glossary_invariants.md  tokio_adapter_boundary_architecture.md  tokio_capability_evidence_map.md  tokio_capability_risk_register.md  tokio_ci_quality_gate_enforcement.md  tokio_db_messaging_gap_baseline.md  tokio_db_pool_transaction_observability_contracts.json  tokio_fs_process_signal_parity_matrix.json  tokio_fs_process_signal_parity_matrix.md  tokio_interop_target_ranking.md  tokio_migration_cookbooks.md  tokio_retry_idempotency_failure_contracts.json  tokio_retry_idempotency_failure_contracts.md  tokio_t6_migration_packs.json  tokio_t6_migration_packs.md  tokio_unit_quality_threshold_contract.md  transport_frontier_benchmark_contract.md  wasm_browser_artifact_integrity_manifest_v1.json  wasm_browser_provenance_attestation_v1.json  wasm_browser_sbom_v1.json  wasm_bundler_compatibility_matrix.md  wasm_canonical_examples.md  (+10 more)
examples/: cancellation_injection.rs  chaos_testing.rs  external_consumer.rs  grafana_dashboard.json  macros_nested.rs  prometheus_metrics.rs  spork_minimal_supervised_app.rs
fuzz/: Cargo.toml
scripts/: capture_baseline.sh  ci_summary_report.py  e2e_test_template.sh  run_all_e2e.sh  run_perf_e2e.sh  run_proof_checks.sh  run_raptorq_e2e.sh  run_semantic_verification.sh  run_transport_frontier_benchmark_smoke.sh  run_wasm_qa_evidence_smoke.sh  test_database_e2e.sh  test_distributed_e2e.sh  test_doctor_advanced_provenance_e2e.sh  test_doctor_cli_packaging_e2e.sh  test_doctor_frankensuite_export_e2e.sh  test_doctor_full_stack_reference_projects_e2e.sh  test_doctor_invariant_analyzer_e2e.sh  test_doctor_orchestration_state_machine_e2e.sh  test_doctor_remediation_failure_injection_e2e.sh  test_doctor_remediation_verification_e2e.sh  test_doctor_report_export_e2e.sh  test_doctor_scenario_coverage_packs_e2e.sh  test_doctor_workspace_scan_e2e.sh  test_h2_security_e2e.sh  test_http_e2e.sh  test_messaging_e2e.sh  test_net_hardening_e2e.sh  test_transport_e2e.sh  test_wasm_packaged_bootstrap_e2e.sh  test_wasm_packaged_cancellation_e2e.sh  test_websocket_e2e.sh  validate_react_consumer.sh
src/: actor.rs  app.rs  console.rs  decoding.rs  encoding.rs  epoch.rs  error.rs  evidence.rs  gen_server.rs  lib.rs  link.rs  monitor.rs  process.rs  remote.rs  session.rs  spork.rs  supervision.rs  test_logging.rs  test_ndjson.rs  test_utils.rs  tracing_compat.rs
tests/: adversarial_witness_corpus.rs  algebraic_laws.proptest-regressions  algebraic_laws.rs  authority_flow_audit_contract.rs  builder_verification.rs  cache_aware_queues.rs  cancel_attribution.rs  cancel_lane_fairness_bounds.rs  cancellation_conformance.rs  capability_token_model_contract.rs  channel_conformance.rs  claim_evidence_graph_contract.rs  codec_e2e.rs  conformal_calibration.rs  contention_e2e.rs  crash_recovery_validation_contract.rs  database_pool_integration.rs  distributed_spawn.rs  distributed_trace_remote_invariants.rs  doctor_full_stack_reference_project_matrix.rs  doctor_remediation_unit_harness.rs  doctor_remediation_visual_regression.rs  doctor_visual_regression_harness.rs  dpor_exploration.rs  e2e_actor.rs  e2e_combinator.rs  e2e_console.rs  e2e_database.rs  e2e_distributed.rs  e2e_geodesic_normalization.rs  e2e_governor_vs_baseline.rs  e2e_log_quality_schema.rs  golden_outputs.rs  grpc_e2e.rs  grpc_enhancement_integration.rs  grpc_production_features.rs  grpc_verification.rs  h2_security.rs  http_e2e.rs  http_h1_client_regression.rs  (+116 more)
(+487 files in other folders)
