[package]
name = "asupersync"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Spec-first, cancel-correct, capability-secure async runtime for Rust"
repository = "https://github.com/Dicklesworthstone/asupersync"
keywords = ["async", "structured-concurrency", "cancellation", "runtime"]
categories = ["asynchronous", "concurrency"]

[features]
# Enable internal test helpers for integration tests.
# This exposes private APIs like Cx::new() and is NOT for production use.
test-internals = []

[lib]
path = "src/lib.rs"

[dependencies]
# Phase 0: prefer std/core; avoid bringing in executors/runtimes.
# Dependencies added here must preserve determinism in the lab runtime.
thiserror = "2.0"
crossbeam-deque = "0.8"
crossbeam-queue = "0.3"
parking_lot = "0.12"
polling = "2.8"
slab = "0.4"
pin-project = "1.1"
rmp-serde = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# NOTE: bincode 1.3.3 is marked unmaintained (RustSec-2025-0141) but stable.
# Consider migration to postcard in future. See UPGRADE_LOG.md for details.
bincode = "1.3"

[dev-dependencies]
proptest = "1.6"
criterion = { version = "0.5", features = ["html_reports"] }
futures-lite = "2.6"
conformance = { package = "asupersync-conformance", path = "conformance" }
tempfile = "3.17"

[[bench]]
name = "phase0_baseline"
harness = false

[lints.rust]
# Default to deny for unsafe code - specific modules that require it can use #[allow(unsafe_code)]
# The epoll reactor requires unsafe for the polling crate's FFI operations
unsafe_code = "deny"
missing_docs = "warn"
unused = { level = "warn", priority = -1 }

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
# Phase 0: Allow documentation and const lints for stubs
missing_panics_doc = "allow"
missing_errors_doc = "allow"
missing_const_for_fn = "allow"
# Phase 0: Allow module naming patterns
module_inception = "allow"
# Phase 0: Allow doc formatting patterns (math notation)
doc_markdown = "allow"
# Phase 0: Allow casts (arena is bounded at 2^32)
cast_possible_truncation = "allow"
