[package]
name = "asupersync"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Spec-first, cancel-correct, capability-secure async runtime for Rust"
repository = "https://github.com/Dicklesworthstone/asupersync"
keywords = ["async", "structured-concurrency", "cancellation", "runtime"]
categories = ["asynchronous", "concurrency"]

[features]
# Enable internal test helpers for integration tests.
# This exposes private APIs like Cx::new() and is NOT for production use.
test-internals = ["dep:tracing", "dep:tracing-subscriber"]
# OpenTelemetry metrics provider (optional).
metrics = ["dep:opentelemetry", "dep:opentelemetry_sdk"]
# Enable tracing integration for structured logging and spans.
# When disabled, tracing macros compile to no-ops for zero overhead.
tracing-integration = ["dep:tracing"]
# Enable proc macros for structured concurrency (scope!, spawn!, join!, race!)
proc-macros = ["dep:asupersync-macros"]
# Optional Tower adapter for AsupersyncService.
tower = ["dep:tower"]
# Enable LZ4 compression for trace files.
trace-compression = ["dep:lz4_flex"]
# Enable io_uring reactor for Linux modern async I/O (requires kernel 5.1+).
io-uring = ["dep:io-uring"]

[lib]
path = "src/lib.rs"

[dependencies]
# Phase 0: prefer std/core; avoid bringing in executors/runtimes.
# Dependencies added here must preserve determinism in the lab runtime.
thiserror = "2.0"
crossbeam-deque = "0.8"
crossbeam-queue = "0.3"
parking_lot = "0.12"
polling = "2.8"
slab = "0.4"
pin-project = "1.1"
rmp-serde = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
socket2 = { version = "0.6", features = ["all"] }
libc = "0.2"
nix = { version = "0.29", features = ["fs"] }
# NOTE: bincode 1.3.3 is marked unmaintained (RustSec-2025-0141) but stable.
# Consider migration to postcard in future. See UPGRADE_LOG.md for details.
bincode = "1.3"
# Optional tracing integration - only compiled when tracing-integration feature is enabled
tracing = { version = "0.1", optional = true }
# Optional tracing subscriber for test-internals feature
tracing-subscriber = { version = "0.3", optional = true }
# Optional OpenTelemetry metrics provider
opentelemetry = { version = "0.28", default-features = false, features = ["metrics"], optional = true }
opentelemetry_sdk = { version = "0.28", default-features = false, features = ["metrics"], optional = true }
# Optional Tower trait integration
tower = { version = "0.5.3", optional = true }
# Optional proc macros for structured concurrency
asupersync-macros = { path = "asupersync-macros", optional = true }
# Optional LZ4 compression for trace files
lz4_flex = { version = "0.11", optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
io-uring = { version = "0.7.11", optional = true }

[dev-dependencies]
proptest = "1.6"
criterion = { version = "0.5", features = ["html_reports"] }
futures-lite = "2.6"
conformance = { package = "asupersync-conformance", path = "conformance" }
tempfile = "3.17"
tracing = "0.1"
tracing-subscriber = "0.3"
opentelemetry_sdk = { version = "0.28", default-features = false, features = ["metrics", "testing"] }
lz4_flex = "0.11"

[[bench]]
name = "phase0_baseline"
harness = false

[[bench]]
name = "timer_wheel"
harness = false

[[bench]]
name = "reactor_benchmark"
harness = false

[lints.rust]
# Default to deny for unsafe code - specific modules that require it can use #[allow(unsafe_code)]
# The epoll reactor requires unsafe for the polling crate's FFI operations
unsafe_code = "deny"
missing_docs = "warn"
unused = { level = "warn", priority = -1 }

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
# Phase 0: Allow documentation and const lints for stubs
missing_panics_doc = "allow"
missing_errors_doc = "allow"
missing_const_for_fn = "allow"
# Phase 0: Allow module naming patterns
module_inception = "allow"
# Phase 0: Allow doc formatting patterns (math notation)
doc_markdown = "allow"
# Phase 0: Allow casts (arena is bounded at 2^32)
cast_possible_truncation = "allow"
