[package]
name = "asupersync"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Spec-first, cancel-correct, capability-secure async runtime for Rust."
repository = "https://github.com/Dicklesworthstone/asupersync"
keywords = ["async", "structured-concurrency", "cancellation", "runtime"]
categories = ["asynchronous", "concurrency"]

[features]
default = ["test-internals"]
# Enable internal test helpers for integration tests.
# This exposes private APIs like Cx::new() and is NOT for production use.
test-internals = ["dep:tracing", "dep:tracing-subscriber", "dep:visibility"]
# OpenTelemetry metrics provider (optional).
metrics = ["dep:opentelemetry", "dep:opentelemetry_sdk"]
# Enable tracing integration for structured logging and spans.
# When disabled, tracing macros compile to no-ops for zero overhead.
tracing-integration = ["dep:tracing"]
# Enable proc macros for structured concurrency (scope!, spawn!, join!, race!)
proc-macros = ["dep:asupersync-macros"]
# Optional Tower adapter for AsupersyncService.
tower = ["dep:tower"]
# Enable LZ4 compression for trace files.
trace-compression = ["dep:lz4_flex"]
# Enable debug HTTP server for runtime inspection.
debug-server = []
# Enable TOML config file loading for RuntimeBuilder.
config-file = ["dep:toml"]
# Enable io_uring reactor for Linux modern async I/O (requires kernel 5.1+).
io-uring = ["dep:io-uring"]
# Enable TLS support via rustls
tls = ["dep:rustls", "dep:rustls-pki-types", "rustls/ring", "dep:ring", "dep:rustls-pemfile", "dep:x509-parser"]
# Enable native root certificates for TLS
tls-native-roots = ["tls", "dep:rustls-native-certs"]
# Enable webpki root certificates for TLS
tls-webpki-roots = ["tls", "dep:webpki-roots"]
# Enable CLI tooling (trace inspection).
cli = ["dep:clap", "dep:time", "trace-compression", "dep:conformance"]
# Enable SQLite async wrapper with blocking pool integration.
sqlite = ["dep:rusqlite"]
# Enable PostgreSQL async client with wire protocol.
postgres = ["dep:sha2"]
# Enable MySQL async client with wire protocol.
mysql = ["dep:sha2"]
# Enable QUIC protocol support via quinn.
quic = ["dep:quinn", "tls"]
# Enable HTTP/3 client support over QUIC.
http3 = ["quic", "dep:h3", "dep:h3-quinn", "dep:http", "dep:bytes"]
# Enable Kafka client integration via rdkafka.
kafka = ["dep:rdkafka"]
# Enable Loom concurrency tests for scheduler verification.
loom-tests = ["dep:loom"]

[lib]
path = "src/lib.rs"

[[bin]]
name = "asupersync"
path = "src/bin/asupersync.rs"
required-features = ["cli"]

[dependencies]
# Phase 0: prefer std/core; avoid bringing in executors/runtimes.
# Dependencies added here must preserve determinism in the lab runtime.
thiserror = "2.0"
crossbeam-queue = "0.3"
parking_lot = "0.12"
polling = "2.8"
slab = "0.4"
pin-project = "1.1"
rmp-serde = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
socket2 = { version = "0.6", features = ["all"] }
libc = "0.2"
nix = { version = "0.29", features = ["fs"] }
getrandom = "0.2"
# NOTE: bincode 1.3.3 is marked unmaintained (RustSec-2025-0141) but stable.
# Consider migration to postcard in future. See UPGRADE_LOG.md for details.
bincode = "1.3"
# Optional tracing integration - only compiled when tracing-integration feature is enabled
tracing = { version = "0.1", optional = true }
# Optional tracing subscriber for test-internals feature
tracing-subscriber = { version = "0.3", optional = true }
# Optional OpenTelemetry metrics provider
opentelemetry = { version = "0.28", default-features = false, features = ["metrics"], optional = true }
opentelemetry_sdk = { version = "0.28", default-features = false, features = ["metrics"], optional = true }
# Optional Tower trait integration
tower = { version = "0.5.3", optional = true }
# Optional proc macros for structured concurrency
asupersync-macros = { path = "asupersync-macros", optional = true }
# Optional conformance tooling (CLI + reports)
conformance = { package = "asupersync-conformance", path = "conformance", optional = true }
# Optional LZ4 compression for trace files
lz4_flex = { version = "0.11", optional = true }
# Optional visibility macro for test-internals feature
visibility = { version = "0.1", optional = true }
# TLS support via rustls
rustls = { version = "0.23", default-features = false, features = ["std", "tls12"], optional = true }
rustls-pki-types = { version = "1.12", optional = true }
# Optional native root certificates
rustls-native-certs = { version = "0.8", optional = true }
# Optional webpki root certificates
webpki-roots = { version = "0.26", optional = true }
# PEM file parsing for TLS certificates
rustls-pemfile = { version = "2.2", optional = true }
# Base64 encoding for WebSocket handshake and certificate pins
base64 = "0.22"
# SHA-1 hashing for WebSocket Sec-WebSocket-Accept calculation (RFC 6455)
sha1 = "0.10"
# X.509 certificate parsing for SPKI extraction
x509-parser = { version = "0.17", optional = true }
# Optional TOML config file support for RuntimeBuilder
toml = { version = "0.8", optional = true }
clap = { version = "4.5", features = ["derive"], optional = true }
time = { version = "0.3", features = ["formatting"], optional = true }
# SQLite async wrapper - bundled by default for portability
rusqlite = { version = "0.33", features = ["bundled"], optional = true }
# SHA-256 for PostgreSQL SCRAM authentication
sha2 = { version = "0.10", optional = true }
# QUIC protocol implementation via quinn
quinn = { version = "0.11", default-features = false, features = ["rustls", "runtime-smol"], optional = true }
# HTTP/3 client support via h3 + h3-quinn
h3 = { version = "0.0.8", optional = true }
h3-quinn = { version = "0.0.10", optional = true }
# External HTTP types for HTTP/3 integration
http = { version = "1.1", optional = true }
# External bytes crate for HTTP/3 integration
bytes = { version = "1.7", optional = true }
# Kafka client integration via rdkafka (optional, requires librdkafka on the system).
rdkafka = { version = "0.39", default-features = false, optional = true }
# Systematic concurrency testing for scheduler (loom-tests feature)
loom = { version = "0.7", optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
io-uring = { version = "0.7.11", optional = true }

# Rustls crypto provider - ring is the most widely used
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
ring = { version = "0.17", optional = true }

[dev-dependencies]
asupersync = { path = ".", features = ["test-internals"] }
proptest = "1.6"
criterion = { version = "0.5", features = ["html_reports"] }
futures-lite = "2.6"
conformance = { package = "asupersync-conformance", path = "conformance" }
tempfile = "3.17"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
opentelemetry_sdk = { version = "0.28", default-features = false, features = ["metrics", "testing"] }
lz4_flex = "0.11"
toml = "0.8"
# Certificate generation for TLS/QUIC tests
rcgen = "0.13"

[[bench]]
name = "phase0_baseline"
harness = false

[[bench]]
name = "timer_wheel"
harness = false

[[bench]]
name = "reactor_benchmark"
harness = false

[[bench]]
name = "protocol_benchmark"
harness = false

[[bench]]
name = "tracing_overhead"
harness = false

[[bench]]
name = "scheduler_benchmark"
harness = false

[lints.rust]
# Default to deny for unsafe code - specific modules that require it can use #[allow(unsafe_code)]
# The epoll reactor requires unsafe for the polling crate's FFI operations
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(loom)'] }
unsafe_code = "deny"
missing_docs = "warn"
unused = { level = "warn", priority = -1 }

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
# Phase 0: Allow documentation and const lints for stubs
missing_panics_doc = "allow"
missing_errors_doc = "allow"
missing_const_for_fn = "allow"
# Phase 0: Allow module naming patterns
module_inception = "allow"
# Phase 0: Allow doc formatting patterns (math notation)
doc_markdown = "allow"
# Phase 0: Allow casts (arena is bounded at 2^32)
cast_possible_truncation = "allow"
